--- a/Prisoners-Dilemma/Tex/ref.bib
+++ b/Prisoners-Dilemma/Tex/ref.bib
@@ -116,3 +116,13 @@
   publisher = {Sage Publications, Inc.},
   url = {http://www.jstor.org/stable/173932}
 }
+@article{charness2002understanding,
+  title={Understanding social preferences with simple tests},
+  author={Charness, Gary and Rabin, Matthew},
+  journal={The quarterly journal of economics},
+  volume={117},
+  number={3},
+  pages={817--869},
+  year={2002},
+  publisher={MIT Press}
+}
