--- a/Prisoners-Dilemma/Prisoners-Dilemma.Rmd
+++ b/Prisoners-Dilemma/Prisoners-Dilemma.Rmd
@@ -3,7 +3,7 @@
 # Remove comments and add values where applicable.
 # The descriptions below should be self-explanatory
 
-title: "Beyond Tit-for-Tat Proposal"
+title: "Beyond Tit for Tat: A Deep Dive into Strategy and Social Preferences"
 #subtitle: "This will appear as Right Header"
 
 documentclass: "elsarticle"
@@ -126,11 +126,11 @@ map(paste0("code/", list.files("code/", "*.R$")), source)  # source all your R s
 
 # Introduction \label{Introduction}
 
+The phrase horses for courses alludes to the fact that a racehorse performs best on a racecourse to which it is specifically suited. More generally this idiom is used to express that certain tools and strategies are better suited over others depending on the task or situations at hand. In the context of the repeated prisoners' dilemma, the strategy of Tit for Tat (TfT), where one mimics their opponent's previous move, reigns supreme and is best suited over others for the situation at hand.
 
+This paper investigates strategic behaviour in the repeated Prisoner's Dilemma by conducting a tournament inspired by @axelrod1980effective but expands the original framework by including distinct strategies. These strategies, categorized into cooperative, defecting, random, and adaptive types, play against each other in 200 rounds of the Prisoner’s Dilemma, allowing for a comprehensive evaluation of their performance. By considering both standard scenarios and environments with varying levels of social preferences, this study explores how different strategies fare in diverse settings, particularly focusing on the adaptability and effectiveness of Tit for Tat (TfT) variants, which have historically been prominent in such tournaments.
 
-The phrase horses for courses alludes to the fact that a racehorse performs best on a racecourse to which it is specifically suited. More generally this idiom is used to express that certain tools and strategies are better suited over others depending on the task or situations at hand. In the context of the repeated prisoners' dilemma, the strategy of tit-for-tat, where one mimics their opponent's previous move, reigns supreme and is best suited over others for the situation at hand.
-
-The question this paper aims to answer is as to which situations is tit-for-tat not the dominant strategy. To do this we have to venture down two potential avenues. The first is the adjustment of pay-off values within games, and the second is adjusting pay-off values from games. Consider a standard prisoners’ dilemma pay-off table:
+Consider a standard prisoners’ dilemma pay-off table:
 
 
 ```{=latex}
@@ -171,7 +171,7 @@ From-game adjustments are a bit different and it considers the utility a player 
 ```
 
 
-The level _p_ here is adapted from Charness & Rabin (2002) who created a utility function that captures various social preferences. In essence, _p_ is how much you care about your opponent's pay-offs as well as your own. In standard prisoners’ dilemma games, this is 0 and thus people are purely self-interested. If we let our pay-offs be R = 3, T = 5, S = 0, and P = 3, then this situation in strategic form would look like:
+The level _p_ here is adapted from @charness2002understanding who created a utility function that captures various social preferences. In essence, _p_ is how much you care about your opponent's pay-offs as well as your own. In standard prisoners’ dilemma games, this is 0 and thus people are purely self-interested. If we let our pay-offs be R = 3, T = 5, S = 0, and P = 3, then this situation in strategic form would look like:
 
 ```{=latex}
 \begin{table}[ht]
@@ -251,28 +251,20 @@ It would be interesting to see under which values of _p_ the dominant strategy c
 
 # Literature Review\label{litreview}
 
+The exploration of strategy choices within the framework of the prisoner’s dilemma has garnered extensive attention in recent literature. @axelrod1980effective foundational work emphasized effective strategies in iterated scenarios, sparking a wealth of research on strategic behaviour in repeated interactions. His tournament studies laid the groundwork for understanding how cooperation can emerge in repeated prisoner’s dilemmas through strategies like Tit for Tat (TfT) and other forms of reciprocity. This exploration of cooperative behaviour in an inherently competitive framework has been expanded by various scholars, each contributing unique insights into how individuals and institutions behave when faced with the tension between cooperation and defection.
 
-We aim to do a short literature review and provide insight from the following sources:
-@{lange2007teaching},
-@{farrell1988evolutionary},
-@{kreps1982rational},
-@{romero2018constructing},
-@{dalbo2019strategy},
-@{breitmoser2015cooperation},
-@{gaudesi2016exploiting},
-@{garcia2018no},
-@{embrey2017cooperation}.
+Recent studies, such as that by @dalbo2019strategy, have focused on the strategic complexity observed in infinitely repeated games. They provide empirical evidence that players in these settings are highly adaptive, often switching strategies depending on the payoffs and the perceived actions of their opponents. In contrast, @breitmoser2015cooperation questions the reciprocity-based models that dominate much of the literature, suggesting that while cooperation is often observed, it may not always stem from reciprocal motivations. @breitmoser2015cooperation finds that in many cases, cooperation might emerge from individual incentives structured by the game's dynamics, rather than a direct desire to reciprocate.
 
-Most importantly we aim to structure our output in tables similar to @{axelrod1980effective}. 
+A significant portion of the literature has also addressed the challenges of finite versus infinite iterations of the dilemma. @kreps1982rational introduced the idea that even in finitely repeated games, players may behave as though they are in an infinite game, cooperating for fear of future retaliation, despite the known endpoint. This idea challenges the strict predictions of defection in the final stages of finitely repeated games and has been explored further by @embrey2017cooperation, who conducted laboratory experiments to observe how players adapt their strategies in finite games. Their findings support the hypothesis that cooperation can persist under certain conditions, even in games with a clear end.
 
-In text @axelrod1980effective
-
-bracket [@axelrod1980effective]
+Adding to the complexity of the strategic decision-making landscape, @romero2018constructing investigated the cognitive processes behind strategy construction in indefinite games, emphasizing how players use heuristics and simplified mental models to navigate the uncertainty of the game's length. This aligns with @farrell1988evolutionary earlier work on evolutionary stability, where they explored how long-term strategies evolve to withstand deviations from equilibrium behaviours.
+From a computational perspective, @garcia2018no utilized simulations to demonstrate that no single strategy could consistently dominate in the repeated prisoner’s dilemma, suggesting that adaptability and context-dependent strategy selection are key to success in such settings. Similarly, @gaudesi2016exploiting leveraged evolutionary modelling techniques to demonstrate how strategies evolve over time, competing in a dynamic landscape shaped by both cooperation and competition.
+The link between theoretical models and real-world application has also been a point of focus. @lange2007teaching developed computerized tournaments to teach the mechanics of the repeated prisoner’s dilemma, blending theory with practice and providing insights into how strategic choices might play out in educational settings. Such studies highlight the importance of teaching and learning mechanisms in understanding strategic behaviour in social dilemmas. Taken together, the contemporary literature on strategy selection in the prisoner’s dilemma underscores the complexity of human decision-making in repeated interactions. 
 
 # Game Construction
+## The Basic Repeated Prisoners dilemma 
 
-
-Notes: There are 25 strategies. Each strategy plays everyone else and itself once for 200 rounds. How each variable fairs against each other is recorded 
+This paper conducts a tournament modelled after @axelrod1980effective but incorporates a wider array of strategies. A total of 25 strategies are used in this repeated Prisoner’s Dilemma tournament. These strategies are categorized in Table 3.1 according to their types. Some strategies always cooperate or always defect, while others, called random strategies, cooperate with a set probability. For example, Random 90% cooperates 90% of the time and defects 10% of the time. Strategies extracted from the literature are marked with references in brackets next to their names. Those without references are new strategies introduced in this paper, each of which will be explained in detail.
 
 ```{=latex}
 \renewcommand{\arraystretch}{1.2} % Adjust row spacing
@@ -297,14 +289,55 @@ Always Defect & Tit for Two Tats & & Bully & Adaptive Peacekeeper & Diminishing 
 
 ```
 
+One such strategy is Retaliatory Defector. It begins by cooperating but defects for two rounds if its opponent defects. After two rounds, if the opponent resumes cooperation, Retaliatory Defector will also return to cooperating. Another strategy, Adaptive Defector, also starts by cooperating, but thereafter assesses the opponent’s behaviour over the last five rounds. If the opponent has defected more than 40% of the time, Adaptive Defector will defect; otherwise, it continues to cooperate.
+Adaptive Peacekeeper focuses on maintaining cooperation while testing the opponent’s behaviour periodically. It starts by cooperating but defects every sixth round to probe the opponent's reaction. If the opponent defects more than twice consecutively after these probes, Adaptive Peacekeeper responds with defection. However, if both players defected in the previous round, the strategy returns to cooperation, signalling a willingness to restore collaboration.
 
+Probing Adjuster is another adaptive strategy. It begins by cooperating but alters its behaviour based on the opponent's past actions. If the opponent defects three times in a row, Probing Adjuster responds by defecting as well. However, if both players defected in the previous round, it tries to re-establish cooperation by cooperating again. If the opponent cooperates after the player defects, the player will continue defecting, exploiting the opponent's leniency. Additionally, if the player cooperates while the opponent cooperates, the player switches to defection to test the opponent’s reaction to a shift in strategy.
 
+Prober tests the opponent’s resilience to defection by defecting for three consecutive rounds if the opponent defects. It always begins with cooperation, but when an opponent defects, Prober immediately retaliates with three rounds of defection before returning to cooperation. This approach aims to probe the opponent's willingness to adjust their behaviour in response to repeated defection, while maintaining a cooperative default when unprovoked.
 
+Forgiving Tester emphasizes cooperation but incorporates occasional defections to gauge the opponent's response. It begins by cooperating, but every fourth round it defects. If the opponent defects three times in a row, Forgiving Tester will retaliate by continuing to defect until the opponent cooperates again. However, if the opponent cooperates after a test defection, or if both players defect in the same round, Forgiving Tester quickly forgives and returns to cooperation. This strategy encourages long-term collaboration while punishing consistent defections.
 
+Cautious Rebuilder starts by cooperating and follows three rules in its decision-making. First, if the opponent defects three times in a row, Cautious Rebuilder will defect until the opponent cooperates again. Second, if the opponent's last move was a defection but the opponent has not defected three times consecutively, Cautious Rebuilder will cooperate, trying to repair relations. Third, after every five rounds, it will defect once to test the opponent’s tolerance for defection.
+In line with @axelrod1980effective, each strategy plays against itself and every other strategy once in the tournament. Each game consists of 200 rounds of the repeated Prisoner’s Dilemma, and the payoffs and outcomes are recorded for every round. The strategy that accumulates the most points after 200 rounds wins the individual game. The overall winner of the tournament is the strategy that achieves the highest total points across all games. The standard Prisoners Dilemma from @axelrod1980effective will be played and is given in the table below:
 
+```{=latex}
+\begin{table}[ht]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+\textbf{Player 1 / Player 2} & \textbf{C (Cooperate)} & \textbf{D (Defect)} \\
+\hline
+\textbf{C (Cooperate)} & $(3, 3)$ & $(0, 5)$ \\
+\hline
+\textbf{D (Defect)} & $(5, 0)$ & $(1, 1)$ \\
+\hline
+\end{tabular}
+\caption{Prisoner's Dilemma Payoff Matrix}
+\end{table}
+```
 
+## The Repeated Prisoners Dilemma With Social Preferences  
 
+This game is played exactly the same as above except now Social Preferences are taken into account. From-game adjustments are a bit different and it considers the utility a player gets from the payoffs of its opponent. The standard Prisoners Dilemma payoff Matrix with from-game adjustments is given below:
 
+```{=latex}
+\begin{table}[ht]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+\textbf{Player 1 / Player 2} & \textbf{C (Cooperate)} & \textbf{D (Defect)} \\
+\hline
+\textbf{C (Cooperate)} & $(3(1-p) + 3p,     3(1-p) + 3p)$ & $(0(1-p) + 5p,     5(1-p)+0p)$ \\
+\hline
+\textbf{D (Defect)} & $(5(1-p) + 0p,    0(1-p) + 5p)$ & $((1-p) + p,     (1-p) + p)$ \\
+\hline
+\end{tabular}
+\caption{Prisoner's Dilemma Payoff Matrix}
+\end{table}
+```
+
+The level _p_ here is adapted from @charness2002understanding who created a utility function that captures various social preferences. In essence, _p_ is how much you care about your opponent's pay-offs as well as your own. This paper will conduct the tournament as above for a range of _p_ values starting from _p_ = -1 where individuals are status seeking to _p_ = 0.5 where indivduals care half as much about themselves as the do about others
 
 
 
@@ -382,9 +415,10 @@ strategies <- list(
 
 
 # Game Results
-
-Talk about game results for a single p-value being 0. 
-Talk about how probing adjuster won. Yet without Adaptive/Adjusting Strategies, then Grim-trigger won. Game results are mostly based on what strategies are in 
+## The Standard Prisoners Dilemma Tournament
+ 
+After the conclusion of the tournament, most interestingly unlike @axelrod1980effective, this paper does not find Tft as the winner in the standard Repeated Prisoners Dilemma. Table 4.1 gives the standard tournament without social preferences. The winner of the tournament was Probing Adjuster with 13575 points followed by Tft with Randomization which had 12887 points and Bully coming in third with 12869 points. In this game Tft came fourth which leads us to believe similarly to @axelrod1980effective that Tft may have won due to the other strategies in the tournament. The winner of the Prisoners Dilemma is highly dependent on the strategies in the tournament.
+Always Cooperate and Random 90% came in second last and last respectively. This is as expected as the tournament included strategies that took advantage of other strategies which always cooperated. Most interestingly, if the adaptive strategies are removed then the Grim/Trigger strategy would have won the game. Also, even though Probing Adjuster won the tournament, the group of adaptive strategies as a whole performed worse than the group of Tit for Tat variant strategies. This result shows the robustness of Tit for Tat variants to perform well against both cooperators and defectors, maintaining high scores overall.
 
 \newpage
 
@@ -407,11 +441,10 @@ create_tournament_table(p_0_results, p_value = 0)
 
 
 
-## Social preferences
+## The Prisoners Dilemma Tournament with Social Preferences
 
-Above was all to do with a single p-value.
-
-Below is all the outcomes for when social preferences vary. We see that 
+Table 4.2 gives the standings of the tournament across different social preferences. The rankings of strategies change across these different values of _p_, illustrating how varying degrees of altruism or hostility affect the success of each strategy. Notably Always Cooperate improves its ranking as _p_ increases, moving from 25th at _p_ = -0.1 to 1st when _p_ = 0.45, showing that cooperative strategies perform better in environments where mutual benefit is prioritized. Always Defect, conversely, declines in rank as _p_ increases, indicating that purely selfish strategies are less effective when players care about the well-being of others. Tit for Tat maintains a relatively stable performance across various _p_ values, reflecting its robustness as a strategy that adapts well to different social preferences. This holds true for the TfT variations in general. Probing Adjuster, which ranked first when _p_ = -0.1, drops significantly as p increases, indicating that more complex strategies designed for selfish environments are less effective in altruistic settings.
+ 
 
 
 
@@ -425,7 +458,7 @@ fullresults_rank %>% format_table()
 
 
 
-Figure \ref{pvalues}
+Figure \ref{pvalues} presents a graphical representation of how the total points of different strategies change as p varies. The x-axis represents different _p_ values, while the y-axis shows the total points for each strategy. From the figure we observe that Always Cooperate shows a steady increase in total points as _p_ increases, reinforcing the observation that this strategy benefits from environments where players value mutual cooperation. Always Defect exhibits declining points as _p_ increases, suggesting that as social preferences rise, defectors are penalized for their selfishness. TfT maintains consistently high points across all _p_ values, further proving its adaptability and effectiveness in both selfish and cooperative environments. Strategies like Probing Adjuster and Bully, which perform well in self-interested settings, see their points drop as _p_ increases, emphasizing their reduced effectiveness in more cooperative contexts.
 
 
 
@@ -436,36 +469,22 @@ fullresults_total %>%   plot_total_utilities()
 
 ```
 
+Figure \ref{pvalues} presents a graphical representation of how the total points of different strategies change as p varies. The x-axis represents different _p_ values, while the y-axis shows the total points for each strategy. From the figure we observe that Always Cooperate shows a steady increase in total points as _p_ increases, reinforcing the observation that this strategy benefits from environments where players value mutual cooperation. Always Defect exhibits declining points as _p_ increases, suggesting that as social preferences rise, defectors are penalized for their selfishness. TfT maintains consistently high points across all _p_ values, further proving its adaptability and effectiveness in both selfish and cooperative environments. Strategies like Probing Adjuster and Bully, which perform well in self-interested settings, see their points drop as _p_ increases, emphasizing their reduced effectiveness in more cooperative contexts.
 
 ```{r}
 fullresults_total %>% create_ranking_table()
 ```
 
-
-
-
-
-
-
-
-
+The analysis of the tournament shows how different strategies perform in the Prisoner's Dilemma under varying levels of social preference. The findings yield that in selfish scenarios, probing and aggressive strategies tend to win but as altruism increases, these strategies struggle. TfT variant strategies have shown to be robust under varying social preferences as can be seen in Table 4.3. Tft has the highest average points across the differing p-values showing its robustness in the face of differing social preferences. These findings once again provide insight into the strength of the TfT strategy. In Prisoners Dilemma games where preferences may be hidden, TfT would according to these findings perform the best.  
 
 ```{r}
 
 fullresults_total %>% format_table( title = "Strategy Values Across Different p Values")
 ```
 
-
-
-
-
-
-
 # Conclusion
 
-
-
-
+The tournament results reveal that strategic success in the Prisoner’s Dilemma is highly dependent on the composition of competing strategies and the level of social preferences. Probing Adjuster outperformed other strategies in the standard setting, but TfT and its variants demonstrated remarkable robustness across different social preference levels. As altruism increases, cooperative strategies gain prominence, while aggressive strategies struggle. The findings highlight the continued relevance of TfT, particularly in contexts where social preferences or hidden intentions influence decision-making, offering valuable insights into strategic adaptability in competitive environments.
 
 \newpage
 # References
